# flowsurface

./: .gitignore  Cargo.toml  build.rs
data/src/: chart.rs
exchange/: Cargo.toml
exchange/src/: adapter.rs  lib.rs
exchange/src/adapter/: binance.rs  bybit.rs  rithmic.rs
exchanges/: Cargo.toml
exchanges/src/: adapter.rs  lib.rs
exchanges/src/adapter/: binance.rs  bybit.rs  rithmic.rs
src/: data_providers.rs  main.rs  style.rs  tickers_table.rs
src/data_providers/rithmic/: mod.rs
src/screen/: dashboard.rs
src/screen/dashboard/: pane.rs  tickers_table.rs
